--- a/Editor/mainwindow.ui
+++ b/Editor/mainwindow.ui
@@ -57,7 +57,7 @@
      </rect>
     </property>
     <widget class="QWidget" name="page_tiles">
-     <widget class="QWidget" name="">
+     <widget class="QWidget" name="layoutWidget">
       <property name="geometry">
        <rect>
         <x>120</x>
@@ -155,20 +155,63 @@
        </item>
       </layout>
      </widget>
+     <widget class="QPushButton" name="button_especia">
+      <property name="geometry">
+       <rect>
+        <x>140</x>
+        <y>200</y>
+        <width>111</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Especia</string>
+      </property>
+      <property name="icon">
+       <iconset resource="resources/my_resources.qrc">
+        <normaloff>:/resources/tile_especia.png</normaloff>:/resources/tile_especia.png</iconset>
+      </property>
+     </widget>
     </widget>
     <widget class="QWidget" name="page_unidades"/>
     <widget class="QWidget" name="page_construcciones">
-     <widget class="QPushButton" name="button_const_ordos">
+     <widget class="QPushButton" name="button_centro_construccion">
       <property name="geometry">
        <rect>
-        <x>260</x>
-        <y>40</y>
-        <width>141</width>
+        <x>230</x>
+        <y>10</y>
+        <width>221</width>
         <height>61</height>
        </rect>
       </property>
       <property name="text">
-       <string>centro de construccion Ordos</string>
+       <string>Centro de Construcción</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="button_asignar_jugador">
+      <property name="geometry">
+       <rect>
+        <x>250</x>
+        <y>80</y>
+        <width>181</width>
+        <height>61</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Asignar jugador</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="button_eliminar_construccion">
+      <property name="geometry">
+       <rect>
+        <x>250</x>
+        <y>150</y>
+        <width>181</width>
+        <height>61</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Eliminar Construcción</string>
       </property>
      </widget>
     </widget>
@@ -216,13 +259,26 @@
     <property name="geometry">
      <rect>
       <x>660</x>
-      <y>80</y>
+      <y>10</y>
       <width>161</width>
       <height>81</height>
      </rect>
     </property>
     <property name="text">
      <string>Cambiar filas y columnas</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="button_cant_jugadores">
+    <property name="geometry">
+     <rect>
+      <x>660</x>
+      <y>110</y>
+      <width>161</width>
+      <height>61</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Cantidad de Jugadores</string>
     </property>
    </widget>
   </widget>
