--- a/Editor/resources/my_resources.qrc
+++ b/Editor/resources/my_resources.qrc
@@ -12,5 +12,6 @@
         <file>mute_icon.png</file>
         <file>centros_construccion.png</file>
         <file>centro_1.png</file>
+        <file>tile_especia.png</file>
     </qresource>
 </RCC>
