--- a/Editor/mainwindow.ui
+++ b/Editor/mainwindow.ui
@@ -158,8 +158,8 @@
      <widget class="QPushButton" name="button_especia">
       <property name="geometry">
        <rect>
-        <x>140</x>
-        <y>200</y>
+        <x>130</x>
+        <y>190</y>
         <width>111</width>
         <height>31</height>
        </rect>
@@ -170,6 +170,19 @@
       <property name="icon">
        <iconset resource="resources/my_resources.qrc">
         <normaloff>:/resources/tile_especia.png</normaloff>:/resources/tile_especia.png</iconset>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="button_asignar_especia">
+      <property name="geometry">
+       <rect>
+        <x>250</x>
+        <y>190</y>
+        <width>121</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Asignar Especia</string>
       </property>
      </widget>
     </widget>
@@ -213,6 +226,67 @@
       <property name="text">
        <string>Eliminar Construcción</string>
       </property>
+     </widget>
+    </widget>
+    <widget class="QWidget" name="page_especia">
+     <widget class="QWidget" name="layoutWidget">
+      <property name="geometry">
+       <rect>
+        <x>120</x>
+        <y>50</y>
+        <width>441</width>
+        <height>51</height>
+       </rect>
+      </property>
+      <layout class="QHBoxLayout" name="horizontalLayout">
+       <item>
+        <widget class="QPushButton" name="pushButton">
+         <property name="text">
+          <string>Especia nivel 1</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <spacer name="horizontalSpacer">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item>
+        <widget class="QPushButton" name="pushButton_3">
+         <property name="text">
+          <string>Esoecia nivel 2</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <spacer name="horizontalSpacer_2">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item>
+        <widget class="QPushButton" name="pushButton_2">
+         <property name="text">
+          <string>Especia nivel 3</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </widget>
     </widget>
    </widget>
